Rm xmlns:cc and other W3C compliance
I gave up on CC answering my question about why their autogenerated license metadata isn't HTML compliant. See https://opensource.creativecommons.org/ccrel-guide/, but RDFa has problems with Google Fonts.

--- a/homepage/home.css
+++ b/homepage/home.css
@@ -48,6 +48,11 @@ section ul {
 	margin-top: 0;
 }
 
+article h2 {
+	font-size: 1em;
+	font-weight: bold;
+}
+
 @media (prefers-color-scheme: dark) {
 	:root {
 		--shadow-shade: 200;
