make 404 links absolute

--- a/404/404.css
+++ b/404/404.css
@@ -1,5 +1,5 @@
 html {
-	background: url("savannah.png") no-repeat bottom center fixed; 
+	background: url("https://rupumped.github.io/404/savannah.png") no-repeat bottom center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
