add code and project pages to homepage

--- a/homepage/home.css
+++ b/homepage/home.css
@@ -52,6 +52,9 @@ article h2 {
 	font-size: 1em;
 	font-weight: bold;
 }
+article .journal-name {
+	font-style: italic;
+}
 
 @media (prefers-color-scheme: dark) {
 	:root {
