estimated reading time

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -25,6 +25,23 @@ h2 {
 	line-height: 1.2em;
 }
 
+span.est-read-time {
+	display: inline-block;
+	font-size: 0.8em;
+	padding: 0.15em 0.9em;
+	margin: 1em 0.4em;
+	background-color: color-mix(in srgb, var(--active-gray) 50%, transparent);
+	border-radius: 1em;
+}
+span.est-read-time::before {
+	content: "⏱";
+	margin-right: 0.4em;
+	color: var(--grayed-out);
+}
+span.est-read-time::after {
+	content: "-minute read";
+}
+
 @media only screen and (max-width: 767px) {
 	article img {
 		width: 14rem;
