--- a/business-card/business-card.css
+++ b/business-card/business-card.css
@@ -43,11 +43,11 @@ body {
 
 header {
 	position: relative;
-	width: 100%;
+	width: var(--max-w);
 	border: 0;
 	background: transparent;
 	top: 0;
-	left: 0;
+	left: calc((100% - var(--max-w)) / 2);
 	z-index: 0;
 }
 header img {
