--- a/project-pages/project-page.css
+++ b/project-pages/project-page.css
@@ -1,32 +1,7 @@
-:root {
-	--skill-margin: 0.25em;
-	--bullet-diameter: 0.6em;
-}
-
-.cover {
-	position: relative;
-}
-.cover img {
-	width: 100%;
-	height: auto;
-}
-.cover h1 {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 100%;
-	transform: translate(-50%, -50%);
-	margin: 0;
-	font-family: var(--main-font-family);
-	color: white;
-	font-size: 3em;
-	font-weight: 700;
+.challenge {
 	text-align: center;
-	line-height: 1.2em;
-	-webkit-text-stroke: 1px black;
-}
-#tinynets-title {
-	font-size: 2.5em;
+	font-style: italic;
+	font-size: 1.4em;
 }
 
 .disclaimer {
@@ -35,35 +10,32 @@
 	font-style: italic;
 }
 
+#skills-demonstrated {
+	background-color: rgba(var(--link-color), 0.1);
+	padding: 1.5em;
+}
+#skills-demonstrated h2 {
+	margin-top: 0;
+}
 .skills {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
 	align-items: center;
 	margin-top: 0.5em;
 	line-height: 1em;
-}
-.bullet {
-	border-radius: 50%;
-	background-color: var(--text-color);
-	width: var(--bullet-diameter);
-	height: var(--bullet-diameter);
-	margin: 0.5em;
+	gap: 0.4em 0.4em;
 }
 .skill {
 	text-align: center;
-	padding: 0.5em;
+	padding: 0.3em 0.5em;
 	white-space: nowrap;
+	background-color: color-mix(in srgb, var(--grayed-out) 15%, transparent);
+	border-radius: 0.5em;
 }
 
 .centered {
 	display: flex;
 	justify-content: center;
-}
-
-img {
-	max-width: 100%;
-	height: auto;
 }
 
 blockquote {
@@ -75,58 +47,28 @@ blockquote {
 }
 
 @media only screen and (max-width: 766px) {
-	:root {
-		--bullet-diameter: 0.3em;
-	}
-
 	main {
 		margin-top: 60px;
 		padding-top: 20px;
 	}
 
-	.cover {
-		position: static;
-		margin-top: 0;
+	h1 {
+		text-align: center;
+		font-size: 1.8em;
 	}
 
-	.cover h1 {
-		position: static;
-		top: auto;
-		left: auto;
-		transform: none;
-		color: black;
-		font-size: 1.8em;
-	}
-	#tinynets-title {
-		font-size: 1.8em;
+	.challenge {
+		font-size: 1.2em;
 	}
 
 	#skills-demonstrated {
-		margin: 0;
+		margin-top: 2rem;
+		padding: 1.2em;
 	}
 	#skills-demonstrated h2 {
 		font-size: 1.3em;
 	}
-	.skills {
-		justify-content: flex-start;
-		margin: 0;
-		padding: 0 0.3em;
-	}
 	.skill {
-		padding: 0;
-		margin: 0 var(--skill-margin);
 		font-size: 0.8em;
-		line-height: 1.3em;
-	}
-	.bullet {
-		padding: 0;
-		margin: 0 var(--skill-margin);
-	}
-
-	@media (prefers-color-scheme: dark) {
-		.cover h1 {
-			color: var(--text-color);
-			-webkit-text-stroke-width: 0;
-		}
 	}
 }
