--- a/main.css
+++ b/main.css
@@ -84,6 +84,9 @@ header .header-content {
 	width: 100%;
 }
 header #name {
+	display: block;
+	color: var(--text-color);
+	text-decoration: none;
 	text-align: center;
 	font-size: 1.7em;
 	letter-spacing: 0.06em;
@@ -360,7 +363,7 @@ footer #footer-socials a {
 footer #footer-socials svg {
 	width: 100%;
 	height: 100%;
-	fill-opacity: 50%;
+	fill-opacity: 0.5;
 }
 footer #footer-initials {
 	width: 2.2em;
