--- a/main.css
+++ b/main.css
@@ -47,6 +47,12 @@ article img {
 	border-radius: 8%;
 	margin-right: 1cm;
 }
+h1 {
+	font-family: var(--special-font-family);
+	font-weight: normal;
+	font-size: 2.1em;
+	margin: 1.5em 0 0.5em 0;
+}
 h1, h2, h3 {
 	line-height: 1.2em;
 }
